--- a/app/views/articles/category.html.erb
+++ b/app/views/articles/category.html.erb
@@ -3,9 +3,10 @@
 
   <%= render "static/category_nav" %>
 
-  <div class="row new_article">
-    <%= render "form" %>
-  </div>
-  
+  <div class="row category_index">
+    <%= render "latest" %>
+    <%= render "breaking" %>
+  </div> <!-- category_index -->
+
   <%= render "static/ourfooter" %>
 </div>
