--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,6 +21,9 @@
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
+
+      <%= link_to 'Next page', category_path(:tech, :per_page => 100, :page => 3) %>
+
       <h1>Latest Articles</h1>
 
       <hr>
@@ -31,7 +34,7 @@
             <img src="http://placehold.it/400x300" class="img-responsive">
           </div>
           <div class="col-md-9">
-            <h2 class="title"><%= article.title %></h2>
+            <h2 class="title"><%= link_to article.title, article_path(article) %></h2>
             <p class="byline">by <%= article.author %> // <%= article.created_at.to_date %></p>
             <p class="summary"><%= article.content %></p>
           </div>
