Breaking headline update

--- a/app/views/static/_category_nav.html.erb
+++ b/app/views/static/_category_nav.html.erb
@@ -1,5 +1,9 @@
 <div class="row category_nav">
-  <div class="col-md-2 logo"><img src="<%= image_url "daft_logo.png" %>" class="img-responsive"/></div>
+  <div class="col-md-2 logo">
+    <%= link_to root_path do %>
+      <img src="<%= image_url "daft_logo.png" %>" class="img-responsive"/>
+    <% end %>
+  </div>
 
   <div class="col-md-8 col-md-offset-1">
     
