--- a/app/views/articles/_breaking_headline.html.erb
+++ b/app/views/articles/_breaking_headline.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-3 text-right">
-    <img src="<%= image_url "icon_#{breaking_headline.category}.png" %>" class=""/>
+    <img src="<%= image_path "icon_#{breaking_headline.category}.png" %>" class=""/>
   </div>
 
   <div class="col-md-8">
