--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -41,7 +41,9 @@
         <hr>
       <% end %>
 
-      <ul class="pagination">
+      <%= will_paginate @articles, renderer: BootstrapPagination::Rails %>
+
+      <!--ul class="pagination">
         <li><a href="#">&laquo;</a></li>
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -49,7 +51,8 @@
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
         <li><a href="#">&raquo;</a></li>
-      </ul>
+      </ul-->
+
     </div>
   </div>
 
