--- a/app/views/static/_account_nav.html.erb
+++ b/app/views/static/_account_nav.html.erb
@@ -7,24 +7,37 @@
   </div>
 
   <div class="col-md-6 col-md-offset-2">
-    <form class="form-inline pull-right">
 
-      <%= link_to( 'Create Article', new_article_path ) %>
+    <!--form class="form-inline pull-right"-->
 
-      <input type="text" name="username" placeholder="Username" class="form-control" autocomplete="off"/>
+    <% if is_signed_in? %>
 
-      <div class="input-group">
-        <input type="password" name="password" placeholder="Password" class="form-control" autocomplete="off"/>
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-            <span class="circle">
-              ?
-            </span>
-          </button>
-        </span>
-      </div>
+      <%= link_to 'Sign out', sessions_path, method: :delete %>
 
-      <input type="submit" value="sign in" class="btn btn-primary"/>
-    </form>
+      <%= link_to 'Create an Article', new_article_path %>
+
+    <% else %>
+      <%= form_tag sessions_path, :class=>'form-inline pull-right' do %>
+
+        <%= link_to( 'Create Article', new_article_path ) %>
+
+        <input type="text" name="email" placeholder="Email" class="form-control" autocomplete="off"/>
+
+        <div class="input-group">
+          <input type="password" name="password" placeholder="Password" class="form-control" autocomplete="off"/>
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+              <span class="circle">
+                ?
+              </span>
+            </button>
+          </span>
+        </div>
+
+        <input type="submit" value="sign in" class="btn btn-primary"/>
+
+      <% end %>
+    <% end %>
+
   </div>
 </div> <!-- Account Nav -->
